Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,12 +22,9 @@
       <h1>
 <a id="lighter" class="anchor" href="#lighter" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lighter</h1>
 
-<p><a href="https://travis-ci.org/meltwater/lighter"><img src="https://img.shields.io/travis/meltwater/lighter/master.svg" alt="Travis CI"></a>
-<a href="https://codecov.io/github/meltwater/lighter?branch=master&amp;view=all"><img src="https://codecov.io/github/meltwater/lighter/coverage.svg?branch=master" alt="Coverage Status"></a></p>
-
 <p><a href="https://en.wikipedia.org/wiki/Lighter_(barge)">Lighter</a> solves the problem of automating
 deployments to <a href="https://github.com/mesosphere/marathon">Marathon</a> and handling of differences
-between multiple environments. Given a hierachy of yaml files and environments, Lighter can
+between multiple environments. Given a hierarchy of yaml files and environments, Lighter can
 expand service config files and deploy them to Marathon.</p>
 
 <p>For even tighter integration into the development process, Lighter can resolve Marathon config files
@@ -35,6 +32,17 @@ from Maven and merge these with environment specific overrides. This enables con
 whenever new releases or snapshots appear in the Maven repository. Optional version range constraints
 allows patches/minor versions to be rolled out continuously, while requiring a config change to roll
 out major versions.</p>
+
+<h2>
+<a id="change-log" class="anchor" href="#change-log" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Change Log</h2>
+
+<p>This project adheres to <a href="http://semver.org">Semantic Versioning</a>.
+Every release is documented on the GitHub <a href="https://github.com/meltwater/lighter/releases">Releases page</a>.</p>
+
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
+
+<p><a href="https://github.com/meltwater/lighter/blob/master/LICENSE.md">MIT</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/meltwater/lighter">Lighter</a> is maintained by <a href="https://github.com/meltwater">meltwater</a>.</span>
