--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Lighter</h1>
+      <h1 class="project-name">
+        <svg viewBox="0 0 10 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:1.41421;">
+            <g id="Layer1">
+                <g transform="matrix(0.106694,0,0,0.106694,-0.301068,-0.352879)">
+                    <path d="M50,7.5C26.5,7.5 7.5,26.5 7.5,50C7.5,73.5 26.5,92.5 50,92.5C73.5,92.5 92.5,73.5 92.5,50C92.5,26.5 73.5,7.5 50,7.5ZM42.8,28.9C43.9,27.8 47.5,24.6 47.7,24.5C47.8,24.4 48,24.5 48,24.6C48,24.7 48.6,25.6 48.6,25.6L48.5,25.6L49,26.4L48,27.1L47.6,27.4L48.4,28.6L47.6,29.1L44.6,31.1C44.5,31.2 42.8,29 42.8,28.9C42.7,28.9 42.8,28.9 42.8,28.9ZM29.6,37.7L28.9,36.6C28.8,36.4 28.6,36.2 28.5,36L27.8,34.9C27.4,34.3 27.2,34 27.2,34C27.2,33.9 26.7,33.4 26.6,33.2C26.5,33 26.5,32.9 26.6,32.8C26.7,32.7 28.8,31.3 30.7,29.9C30.2,29 30,28.1 30,27.1C30,24.1 32.4,21.7 35.4,21.7C38.4,21.7 40.8,24.1 40.8,27.1C40.8,28.3 40.4,29.4 39.7,30.3C41.1,31.5 42.4,32.6 42.4,32.6L42,32.9L31.3,40.1C30.8,39.5 30.2,38.6 29.6,37.7ZM73.3,67.5L57.3,78.2C57,78.4 56.6,78.3 56.3,78L33.3,43.6L50.4,32.1L73.5,66.6C73.6,66.9 73.6,67.3 73.3,67.5Z" style="fill:white;fill-rule:nonzero;"/>
+                </g>
+                <g transform="matrix(0.106694,0,0,0.106694,-0.301068,-0.352879)">
+                    <path d="M35.4,23.7C33.5,23.7 32,25.2 32,27.1C32,27.7 32.2,28.2 32.4,28.7L32.9,28.4C33.1,28.3 33.3,28.1 33.5,28C35.2,26.8 35.8,27 36.6,27.6C36.8,27.8 37.2,28.1 37.8,28.6L38.2,29C38.6,28.5 38.8,27.8 38.8,27.1C38.8,25.2 37.3,23.7 35.4,23.7Z" style="fill:white;fill-rule:nonzero;"/>
+                </g>
+            </g>
+        </svg>
+        Lighter
+      </h1>
       <h2 class="project-tagline">Marathon deployment automation tool</h2>
       <a href="https://github.com/meltwater/lighter" class="btn">View on GitHub</a>
       <a href="https://github.com/meltwater/lighter/zipball/master" class="btn">Download .zip</a>
@@ -52,6 +64,6 @@ Every release is documented on the GitHub <a href="https://github.com/meltwater/
 
     </section>
 
-  
+
   </body>
 </html>
