Change header buttons

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </h1>
       <h2 class="project-tagline">Marathon deployment automation tool</h2>
       <a href="https://github.com/meltwater/lighter" class="btn">View on GitHub</a>
-      <a href="https://github.com/meltwater/lighter/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/meltwater/lighter/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/meltwater/lighter/releases/latest" class="btn">Download binaries</a>
+      <a href="https://github.com/meltwater/lighter/blob/master/README.md" class="btn">View Readme</a>
     </section>
 
     <section class="main-content">
