Change text and colors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </h1>
       <h2 class="project-tagline">Marathon deployment automation tool</h2>
       <a href="https://github.com/meltwater/lighter" class="btn">View on GitHub</a>
-      <a href="https://github.com/meltwater/lighter/releases/latest" class="btn">Download binaries</a>
+      <a href="https://github.com/meltwater/lighter/releases/latest" class="btn">Downloads</a>
       <a href="https://github.com/meltwater/lighter/blob/master/README.md" class="btn">View Readme</a>
     </section>
 
